--- a/index.html
+++ b/index.html
@@ -1,14 +1,3 @@
-<h1>hola</h1>
-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaah
+El US Festival fue un festival de música y tecnología realizado en 1982 y 1983 en San Bernardino, California. Steve Wozniak, cofundador de Apple, ideó el concepto en 1981 mientras se recuperaba de un accidente aéreo, pero lo descartó al no tener los conocimientos suficientes para realizarlo. Más tarde, le comentó el proyecto al académico Peter Ellis y con un presupuesto inicial de dos millones de dólares, ambos fundaron la compañía Unuson. Con la premisa de hacer un gran evento que uniera la música y la tecnología, la empresa contrató a la agencia Bill Graham Presents del promotor de giras Bill Graham para que estuviese a cargo del espectáculo musical. Para llevarlo a cabo, escogieron el parque regional Glen Helen cerca de Devore en San Bernardino, porque estaba ubicado al sur de la unión de las carreteras interestatales 15 y 215, y a una hora de distancia de Los Ángeles. Unuson realizó una serie de modificaciones al parque para poder recibir a 250 000 personas, por ejemplo construyeron dos carreteras internas, estacionamientos, una zona de campamentos y establecieron conexiones de agua potable. En total, el terreno empleado para el festival bordeó las 500 hectáreas.
 
-
-
-
-1
-1
-
-1
-1
-1
-1
-1
+La edición de 1982 aconteció el fin de semana del Labor Day, los días 3, 4 y 5 de septiembre. Veinte artistas de rock, new wave, country y pop amenizaron la jornada, mientras que decenas de expositores exhibieron en la feria tecnológica elementos relacionados con computadoras, videojuegos, música y ciencia. A pesar de reunir a 500 000 personas, Wozniak perdió algunos millones de dólares. Por su parte, la edición de 1983 se llevó a cabo el fin de semana del Memorial Day, los días 28, 29 y 30 de mayo, aunque hubo un cuarto concierto, celebrado el 4 de junio. Esta vez contrataron a treinta y tres artistas quienes fueron ordenados por género musical: el primero de new wave, el segundo de heavy metal, el tercero de rock y el cuarto de country. Esta versión juntó a 735 000 personas —sin contar el día del country— con el concierto de metal como el más concurrido, porque reunió a 330 000 personas. A pesar de aquello, Wozniak y su equipo nuevamente perdieron millones de dólares.
