--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 hola
-<javascript>
+<script>
   function gup( name, url ) {
     if (!url) url = location.href;
     name = name.replace(/[\[]/,"\\\[").replace(/[\]]/,"\\\]");
@@ -9,4 +9,4 @@ hola
     return results == null ? null : results[1];
 }
 gup('q', 'hxxp://example.com/?q=abc')
-  </javascript>
+</script>
